@@ -1,3 +1,11 @@
+<file name="a.txt">
+	VG90YWwuanMgdjM=
+</file>
+
+<file name="b.txt">
+	UGV0ZXIgU2lya2E=
+</file>
+
 <style>
 	body { color: red; }
 </style>
